--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0;url=https://yourname.github.io/myapplication/frontend/public/index.html" />
+<meta http-equiv="refresh" content="0;url=https://github.com/LiveryBus/liverybus.github.io/blob/main/home5-color1.html" />
