--- a/home5-color1.html
+++ b/home5-color1.html
@@ -123,7 +123,7 @@
               </h1>
 
               <p class="subtitle">
-                Hey, If you are a Bus Simulator Indonesia Gamer. Then you are in the right place. High quality liveries and other stuffs are available in this app for free. Download our app now!
+                Hey, If you are a Bus Simulator Indonesia Gamer. Then you are in the right place. High quality liveries and other stuffs are available in this app for free!. Download our app now.
               </p>
               <div class="links">
                 <a href="#download-app" class="mybtn2 left-link">Download<i class="icofont-download"></i></a>
