Edited Main HTML

--- a/home5-color1.html
+++ b/home5-color1.html
@@ -338,9 +338,10 @@
           <div class="section-title">
             <h2 class="title">Proudly Developed From Kerala</h2>
 
-            <p>This app was developed from kerala officialy for all keralites who loves
-              bus simulator indonesia. ഇത്രെയൊക്കെ ആയ സ്ഥിതിക്ക്, നോക്കി നിൽക്കാതെ
-              അങ്ങ് ഡൌൺലോഡ് ചെയ്യ് ചെക്കാ... പിന്നല്ല. അല്ലേലും മലയാളി പോളിയല്ല!
+            <p>This app was developed by Gloomlabs Proudly from kerala.
+              Officialy for all keralites who loves bus simulator indonesia.
+              ഇത്രെയൊക്കെ ആയ സ്ഥിതിക്ക്, നോക്കി നിൽക്കാതെ അങ്ങ് 
+              ഡൌൺലോഡ് ചെയ്യ് ചെക്കാ... പിന്നല്ല. അല്ലേലും മലയാളി പോളിയല്ല!
               </p>
           </div>
         </div>
