--- a/home5-color1.html
+++ b/home5-color1.html
@@ -327,10 +327,10 @@
             <h2 class="title">Proudly Developed From Kerala</h2>
 
             <p>This app was developed by Gloomlabs Proudly from kerala.
-              Officialy for all keralites who loves bus simulator indonesia.
-              ഇത്രെയൊക്കെ ആയ സ്ഥിതിക്ക്, നോക്കി നിൽക്കാതെ അങ്ങ് 
+              Officialy for all keralites who loves bus simulator indonesia.</p>
+              <h5>ഇത്രെയൊക്കെ ആയ സ്ഥിതിക്ക്, നോക്കി നിൽക്കാതെ അങ്ങ് 
               ഡൌൺലോഡ് ചെയ്യ് ചെക്കാ... പിന്നല്ല. അല്ലേലും മലയാളി പോളിയല്ല!
-              </p>
+              </h5>
           </div>
         </div>
       </div>
