--- a/home5-color1.html
+++ b/home5-color1.html
@@ -6,6 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manjari&display=swap" rel="stylesheet">
+
   <title> Applion - App Landing Page</title>
   <!-- favicon -->
   <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
@@ -326,11 +331,11 @@
           <div class="section-title">
             <h2 class="title">Proudly Developed From Kerala</h2>
 
-            <p>This app was developed by Gloomlabs Proudly from kerala.
+            <p>This app was developed by Gloomlabs proudly from Kerala.
               Officialy for all keralites who loves bus simulator indonesia.</p>
-              <h5>ഇത്രെയൊക്കെ ആയ സ്ഥിതിക്ക്, നോക്കി നിൽക്കാതെ അങ്ങ് 
+              <p style="font-family: monospace;">ഇത്രെയൊക്കെ ആയ സ്ഥിതിക്ക്, നോക്കി നിൽക്കാതെ അങ്ങ് 
               ഡൌൺലോഡ് ചെയ്യ് ചെക്കാ... പിന്നല്ല. അല്ലേലും മലയാളി പോളിയല്ല!
-              </h5>
+              </p>
           </div>
         </div>
       </div>
