--- a/home5-color1.html
+++ b/home5-color1.html
@@ -333,7 +333,7 @@
 
             <p>This app was developed by Gloomlabs proudly from Kerala.
               Officialy for all keralites who loves bus simulator indonesia.</p>
-              <p style="font-family: monospace;">ഇത്രെയൊക്കെ ആയ സ്ഥിതിക്ക്, നോക്കി നിൽക്കാതെ അങ്ങ് 
+              <p style="font-family: 'Manjari', sans-serif;">ഇത്രെയൊക്കെ ആയ സ്ഥിതിക്ക്, നോക്കി നിൽക്കാതെ അങ്ങ് 
               ഡൌൺലോഡ് ചെയ്യ് ചെക്കാ... പിന്നല്ല. അല്ലേലും മലയാളി പോളിയല്ല!
               </p>
           </div>
