--- a/home5-color1.html
+++ b/home5-color1.html
@@ -321,92 +321,15 @@
   <!-- Why Use This App -->
   
   <!--  Video Area Start -->
-  <section class="video" id="video">
-    <img class="bgshape" src="assets/images/shape1.png" alt="">
-    <img class="shape1" src="assets/images/shape-color1/round-shape4.png" alt="">
-    <img class="shape2" src="assets/images/shape-color1/round-shape5.png" alt="">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-md-10 col-lg-8">
-          <div class="section-title">
+
             <h2 class="title">Proudly Developed From Kerala</h2>
 
-            <p>This app was developed by Gloomlabs proudly from Kerala.
+            <p>This app was developed by Gloomlabs proudly from the gods own country, Kerala.
               Officialy for all keralites who loves bus simulator indonesia.</p>
-              <p style="font-family: 'Manjari', sans-serif;">ഇത്രെയൊക്കെ ആയ സ്ഥിതിക്ക്, നോക്കി നിൽക്കാതെ അങ്ങ് 
+              <p style="font-family: 'Manjari', sans-serif; font-size: 20px;">ഇത്രെയൊക്കെ ആയ സ്ഥിതിക്ക്, നോക്കി നിൽക്കാതെ അങ്ങ് 
               ഡൌൺലോഡ് ചെയ്യ് ചെക്കാ... പിന്നല്ല. അല്ലേലും മലയാളി പോളിയല്ല!
               </p>
-          </div>
-        </div>
-      </div>
-      <div class="row justify-content-center">
-        <div class="col-lg-10 col-md-10">
-          <div class="video-wrapper">
-            <div class="video-box">
-              <div class="overly"></div>
-              <div class="play-icon">
-                <a href="https://www.youtube.com/watch?v=4DCTTrGjGU4" class="video-play-btn mfp-iframe">
-                  <i class="fas fa-play"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!--  Counter Area Start -->
-    <div class="counter-area" id="counter-area">
-      <div class="container">
-        <div class="row text-center">
-          <div class="col-lg-3 col-6">
-            <div class="fun-box">
-              <div class="icon">
-                <i class="icofont-users-alt-2"></i>
-              </div>
-              <div class="counter-wrapper">
-                <h3 class="counter">6900</h3><span class="math">+</span>
-              </div>
-              <h5 class="categori">Active User</h5>
-            </div>
-          </div>
-          <div class="col-lg-3 col-6">
-            <div class="fun-box">
-              <div class="icon">
-                <i class="icofont-download"></i>
-              </div>
-              <div class="counter-wrapper">
-                <h3 class="counter">9696</h3><span class="math">+</span>
-              </div>
-              <h5 class="categori">Download</h5>
-            </div>
-          </div>
-          <div class="col-lg-3 col-6">
-            <div class="fun-box">
-              <div class="icon">
-                <i class="icofont-heart-alt"></i>
-              </div>
-              <div class="counter-wrapper">
-                <h3 class="counter">3700</h3><span class="math">+</span>
-              </div>
-              <h5 class="categori">Happy Clients</h5>
-            </div>
-          </div>
-          <div class="col-lg-3 col-6">
-            <div class="fun-box">
-              <div class="icon">
-                <i class="icofont-star"></i>
-              </div>
-              <div class="counter-wrapper">
-                <h3 class="counter">3402</h3><span class="math">+</span>
-              </div>
-              <h5 class="categori">Total Rates</h5>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Counter Area End -->
-  </section>
+      
   <!-- Video Area End -->
 
   <!-- app screenshot area start -->
