--- a/home5-color1.html
+++ b/home5-color1.html
@@ -321,15 +321,31 @@
   <!-- Why Use This App -->
   
   <!--  Video Area Start -->
-
+  <section class="video" id="video">
+    <img class="bgshape" src="assets/images/shape1.png" alt="">
+    <img class="shape1" src="assets/images/shape-color1/round-shape4.png" alt="">
+    <img class="shape2" src="assets/images/shape-color1/round-shape5.png" alt="">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-10 col-lg-8">
+          <div class="section-title">
             <h2 class="title">Proudly Developed From Kerala</h2>
 
-            <p>This app was developed by Gloomlabs proudly from the gods own country, Kerala.
+            <p>This app was developed by Gloomlabs proudly from the gods own county, Kerala.
               Officialy for all keralites who loves bus simulator indonesia.</p>
               <p style="font-family: 'Manjari', sans-serif; font-size: 20px;">ഇത്രെയൊക്കെ ആയ സ്ഥിതിക്ക്, നോക്കി നിൽക്കാതെ അങ്ങ് 
               ഡൌൺലോഡ് ചെയ്യ് ചെക്കാ... പിന്നല്ല. അല്ലേലും മലയാളി പോളിയല്ല!
               </p>
-      
+          </div>
+        </div>
+      </div>
+      <div class="image">
+        <div class="image">
+        <div class="row justify-content-center">
+        <div class="col-md-10 col-lg-8">
+          <img style="size: 40px;;" src="assets/images/gllogo.png">
+        </div>
+  </section>
   <!-- Video Area End -->
 
   <!-- app screenshot area start -->
