--- a/home5-color1.html
+++ b/home5-color1.html
@@ -246,7 +246,7 @@
         <div class="col-lg-6 d-flex align-self-center">
           <div class="left-area content">
             <div class="section-title extra-padding">
-              <h2 class="title">download all bussid liveries for free 
+              <h2 class="title">Download all bussid liveries for free 
                   with <span>LiveryBus</span></h2>
               <p>
                 We are very glad to indroducing our app to you. we give more
@@ -343,7 +343,7 @@
             <div class="col-lg-6  order-first order-lg-last">
               <div class="right-area">
                 <div class="img">
-                  <img class="img-fluid img1" src="assets/images/phone-landscape.png" alt="">
+                  <img class="img-fluid img1" src="assets/images/mobile-1.png" alt="">
                   <img class="img-fluid img2" src="assets/images/mobile-3.png" alt="">
                 </div>
               </div>
@@ -374,12 +374,16 @@
           </div>
         </div>
       </div>
-      <div class="image">
+      <div class=" image" style="scale: 20px;">
         <div class="image">
         <div class="row justify-content-center">
         <div class="col-md-10 col-lg-8">
-          <img style="scale: 25px;" src="assets/images/gllogo.png">
+          <img src="assets/images/gllogo.png">
         </div>
+        </div>
+        </div>
+      </div>
+    </div>
   </section>
 
   <div class="row justify-content-center">
