--- a/home5-color1.html
+++ b/home5-color1.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manjari&display=swap" rel="stylesheet">
 
-  <title> Applion - App Landing Page</title>
+  <title> LiveryBus; High Quality Bussid Liveries</title>
   <!-- favicon -->
   <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
   <!-- bootstrap -->
@@ -82,22 +82,6 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#app-screenshot-area">Screenshots</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#testimonial-area">Testimonial</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#pricing">Pricing</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Blog
-                    </a>
-                    <div class="dropdown-menu">
-                    <a class="dropdown-item" href="blog.html">Blog</a>
-                    <a class="dropdown-item" href="blog-sidebar.html">Blog Sidebar</a>
-                    <a class="dropdown-item" href="blog-details.html">Blog Details</a>
-                    </div>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#contact">Contact</a>
