--- a/home5-color1.html
+++ b/home5-color1.html
@@ -704,24 +704,26 @@
           </div>
         </div>
       </div>
+
+      <li>
+        <div class="info-box box2">
+          <div class="left">
+            <div class="icon">
+              <i class="fas fa-envelope"></i>
+            </div>
+          </div>
+          <div class="right">
+            <div class="content">
+              <p>app.liverybus@gmail.com</p>
+              <p>gloomlabsweb@gmail.com</p>
+            </div>
+          </div>
+        </div>
+      </li>
+      
       <div class="row">
         <div class="col-xl-4">
           <ul class="info-contact">
-            <li>
-              <div class="info-box box2">
-                <div class="left">
-                  <div class="icon">
-                    <i class="fas fa-envelope"></i>
-                  </div>
-                </div>
-                <div class="right">
-                  <div class="content">
-                    <p>app.liverybus@gmail.com</p>
-                    <p>gloomlabsweb@gmail.com</p>
-                  </div>
-                </div>
-              </div>
-            </li>
           </ul>
         </div>
         <div class="col-xl-8">
@@ -754,21 +756,7 @@
 <!-- Footer Section Start -->
   <footer class="footer" id="footer">
     <div class="background"></div>
-      <div class="row">
-        <div class="col-md-6 col-lg-4">
-          <div class="footer-info-area">
-            <div class="footer-logo">
-              <a href="#" class="logo-link">
-                <img src="assets/images/logo-color.png" alt="">
-              </a>
-            </div>
-            <div class="text">
-              <p>Thankyou for visiting our website. LiveryBus is a free of cost application for all the BUSSID gamers. 
-              </p>
-            </div>
-          </div>
-        </div>
-    </div>
+    <div class="container"></div>
     <div class="copy-bg text-center">
       <div class="copy-bg text-center">
         <p>Copyright © 2023. Developed By
