--- a/home1-color1.html
+++ b/home1-color1.html
@@ -113,13 +113,12 @@
           <div class="left-content">
             <div class="content">
               <h1 class="title">
-                Awesome App for Your
-                Modern Lifestyle
+                LiveryBus;
+                Ultimate Bussid Gamer's App
               </h1>
 
               <p class="subtitle">
-                Smile spoke total few great had never their too. Amongst moments do in arrived at my replied.
-              </p>
+                Hey, If you are a Bus Simulator Indonesia Gamer. Then you are in the right place. High quality liveries and other stuffs are available in this app for free!. Download our app now.</p>
               <div class="links">
                 <a href="#download-app" class="mybtn2 left-link">Download<i class="icofont-download"></i></a>
                 <a href="#why-use-this-app" class="mybtn2">Learn More<i class="fas fa-chevron-right"></i></a>
