--- a/home1-color1.html
+++ b/home1-color1.html
@@ -113,12 +113,13 @@
           <div class="left-content">
             <div class="content">
               <h1 class="title">
-                LiveryBus;
-                Ultimate Bussid Gamer's App
+                Awesome App for Your
+                Modern Lifestyle
               </h1>
 
               <p class="subtitle">
-                Hey, If you are a Bus Simulator Indonesia Gamer. Then you are in the right place. High quality liveries and other stuffs are available in this app for free!. Download our app now.</p>
+                Smile spoke total few great had never their too. Amongst moments do in arrived at my replied.
+              </p>
               <div class="links">
                 <a href="#download-app" class="mybtn2 left-link">Download<i class="icofont-download"></i></a>
                 <a href="#why-use-this-app" class="mybtn2">Learn More<i class="fas fa-chevron-right"></i></a>
@@ -254,7 +255,7 @@
         <div class="col-lg-6 order-first order-lg-last">
           <div class="right-area">
             <div class="img">
-              <img class="img-fluid img1" src="assets/images/mobile-1.png" alt="">
+              <img class="img-fluid img1" src="assets/images/mobile-4.png" alt="">
               <img class="img-fluid img2" src="assets/images/mobile-3.png" alt="">
             </div>
           </div>
@@ -264,7 +265,7 @@
         <div class="col-lg-6">
           <div class="left-area content">
             <div class="img">
-              <img class="img-fluid img1" src="assets/images/mobile-4.png" alt="">
+              <img class="img-fluid img1" src="assets/images/mobile-1.png" alt="">
               <img class="img-fluid img2" src="assets/images/mobile-6.png" alt="">
             </div>
           </div>
@@ -296,7 +297,7 @@
           </div>
         </div>
       </div>
-      <div class="row row-three">
+      <div class="row row-one">
           <div class="col-lg-6 d-flex align-self-center">
               <div class="left-area content">
                 <div class="section-title extra-padding">
@@ -319,14 +320,13 @@
                     
                   </li>
                 </ul>
-                <a href="#download-app" class="mybtn1 downloadbtn">Download Now <i class="icofont-download"></i></a>
               </div>
             </div>
             <div class="col-lg-6  order-first order-lg-last">
               <div class="right-area">
                 <div class="img">
-                  <img class="img-fluid img1" src="assets/images/mobile-10.png" alt="">
-                  <img class="img-fluid img2" src="assets/images/mobile-3.png" alt="">
+                  <img class="img-fluid img1" src="assets/images/phone-10.png" alt="">
+                  <img class="img-fluid img2" src="assets/images/mobile-10.png" alt="">
                 </div>
               </div>
             </div>
