--- a/home1-color1.html
+++ b/home1-color1.html
@@ -345,20 +345,20 @@
       <div class="row justify-content-center">
         <div class="col-md-10 col-lg-8">
           <div class="section-title">
-            <h2 class="title">why choose us</h2>
+            <h2 class="title">Proudly Developed From Kerala</h2>
 
-            <p>Expenses as material breeding insisted building to in. Continual so distrusts pronounce by
-              unwilling listening. Thing do taste on we manor.
-            </p>
+            <p>This app was developed by Gloomlabs proudly from the gods own county, Kerala.
+              Officialy for all keralites who loves bus simulator indonesia.</p>
+              <p style="font-family: 'Manjari', sans-serif; ">അപ്പോൾ പിന്നെ നോക്കി നിൽക്കാതെ അങ്ങ് 
+              ഡൌൺലോഡ് ചെയ്യ് മച്ചാനേ... പിന്നല്ല. <strong>അല്ലേലും മലയാളി പോളിയല്ല!</strong>
+              </p>
           </div>
         </div>
       </div>
-      <div class="row justify-content-center">
         <div class="col-lg-10 col-md-10">
             <div class="video-box">
               <div class="overly"></div>
-              <div class="img" style="align-self: center;">
-                <img src="assets/images/gllogo.png" class="center" alt="">
+                <img class="aligncenter" src="assets/images/gllogo.png" alt="">
                 </a>
               </div>
             </div>
@@ -638,7 +638,7 @@
             <h4 class="title">Rating : </h4>
               <div class="review-area">
                   <div class="left">
-                    <h4 class="rate">4.7</h4>
+                    <h4 class="rate">4.5</h4>
                       <ul class="stars">
                           <li>
                               <i class="icofont-star"></i>
@@ -656,20 +656,20 @@
                               <i class="icofont-star"></i>
                           </li>
                         </ul>
-                        <p class="total-download">96,965</p>
+                        <p class="total-download">86,965</p>
                   </div>
                   <div class="right">
                     <ul class="reating-poll">
                       <li>
                         <span>5</span>
                           <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 90%"  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar" role="progressbar" style="width: 70%"  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                           </div>
                       </li>
                       <li>
                           <span>4</span>
                           <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                           </div>
                       </li>
                       <li>
@@ -698,22 +698,22 @@
             <li>
               <a href="#" class="option option1">
                 <div class="left  d-flex align-self-center">
-                  <i class="icofont-brand-android-robot"></i>
+                  <i class="icofont-download"></i>
                 </div>
                 <div class="right">
-                  <span>Download on</span>
-                  <p>Play Store</p>
+                  <span>Download LiveryBus</span>
+                  <p>v1.6.0</p>
                 </div>
               </a>
             </li>
             <li>
               <a href="#" class="option">
                 <div class="left d-flex align-self-center">
-                  <i class="icofont-brand-apple"></i>
+                  <i class="icofont-cloud-download"></i>
                 </div>
                 <div class="right">
-                  <span>Download on</span>
-                  <p>App Store</p>
+                  <span>Download from</span>
+                  <p>Google Drive</p>
                 </div>
               </a>
             </li>
@@ -1091,13 +1091,12 @@
               <div class="info-box box1">
                 <div class="left">
                   <div class="icon">
-                    <i class="fas fa-phone"></i>
+                    <i class="icofont-instagram"></i>
                   </div>
                 </div>
                 <div class="right">
                   <div class="content">
-                    <p>+333 123 4565 7898</p>
-                    <p>+333 153 4575 7893</p>
+                    <p>@black._.Sparrow07</p>
                   </div>
                 </div>
               </div>
@@ -1111,8 +1110,8 @@
                 </div>
                 <div class="right">
                   <div class="content">
-                    <p>demoname@name.com</p>
-                    <p>anothername@name.com</p>
+                    <p>gloomlabsweb@gmail.com</p>
+                    <p>app.liverybus@gmail.com</p>
                   </div>
                 </div>
               </div>
@@ -1126,7 +1125,7 @@
                 </div>
                 <div class="right">
                   <div class="content">
-                    <p>140 Berkley Street, Philadelphia, Pennsylvania</p>
+                    <p>Chennithala Po Mavelikkara, Kerala, India - 689623</p>
                   </div>
                 </div>
               </div>
@@ -1215,84 +1214,21 @@
                 </p>
               </div>
             </div>
-            <div class="fotter-social-links">
-              <ul>
-                <li>
-                  <a href="#" class="facebook">
-                    <i class="fab fa-facebook-f"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#" class="twitter">
-                    <i class="fab fa-twitter"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#" class="linkedin">
-                    <i class="fab fa-linkedin-in"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#" class="google-plus">
-                    <i class="fab fa-google-plus-g"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#" class="dribbble">
-                    <i class="fab fa-dribbble"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
           </div>
-          <div class="col-md-6 col-lg-2">
-            <div class="footer-widget use-full-link-widget">
-              <h4 class="title">
-                Usefull
-              </h4>
-              <ul class="link-list">
-                <li>
-                  <a href="#">
-                    <i class="fas fa-angle-double-right"></i>About Us
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fas fa-angle-double-right"></i>Our Story
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fas fa-angle-double-right"></i>Forum
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fas fa-angle-double-right"></i>Carer
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
+          
           <div class="col-md-6 col-lg-3">
             <div class="footer-widget support-link-widget">
               <h4 class="title">
-                Support
+                Support Links
               </h4>
               <ul class="link-list">
                 <li>
-                  <a href="#">
+                  <a href="home1-color1.html#faq">
                     <i class="fas fa-angle-double-right"></i>FAQ's
                   </a>
                 </li>
-                <li>
-                  <a href="#">
-                    <i class="fas fa-angle-double-right"></i>Privacy
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fas fa-angle-double-right"></i>Policy
+                  <a href="PP.html">
+                    <i class="fas fa-angle-double-right"></i>Privacy Policy
                   </a>
                 </li>
                 <li>
@@ -1303,38 +1239,15 @@
               </ul>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="footer-widget twitter-widget">
-              <h4 class="title">
-                Twitter
-              </h4>
-              <div class="twitte-slider">
-                <div class="item">
-                  <div class="content">
-                    <p><i class="fab fa-twitter"></i>
-                        Woody equal ask saw sir weeks aware decay. Entrance prospect removing we packages.
-                    </p>
-                    <a href="#" class="profile">@donal</a>
-                  </div>
-                </div>
-                <div class="item">
-                  <div class="content">
-                    <p><i class="fab fa-twitter"></i>
-                        Woody equal ask saw sir weeks aware decay. Entrance prospect removing we packages.
-                    </p>
-                    <a href="#" class="profile">@jhondoe</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
       <div class="copy-bg text-center">
-        <p>Copyright © 2019. All rights reserved by
-          <a href="https://mamunverse.com/">Mamunur Rashid</a>
+        <p>Copyright © 2023. Designed by Akash Krishna from
+          <a href="https://mamunverse.com/">GloomLabs</a>
         </p>
       </div>
+    </div>
+  </div>
     </footer>
     <!-- Footer Section End -->
   
