--- a/home1-color1.html
+++ b/home1-color1.html
@@ -363,58 +363,6 @@
         </div>
       </div>
     </div>
-    <!--  Counter Area Start -->
-    <div class="counter-area" id="counter-area">
-      <div class="container">
-        <div class="row text-center">
-          <div class="col-lg-3 col-6">
-            <div class="fun-box">
-              <div class="icon">
-                <i class="icofont-users-alt-2"></i>
-              </div>
-              <div class="counter-wrapper">
-                <h3 class="counter">235+</h3><span class="math">+</span>
-              </div>
-              <h5 class="categori">Active User</h5>
-            </div>
-          </div>
-          <div class="col-lg-3 col-6">
-            <div class="fun-box">
-              <div class="icon">
-                <i class="icofont-download"></i>
-              </div>
-              <div class="counter-wrapper">
-                <h3 class="counter">240+</h3><span class="math">+</span>
-              </div>
-              <h5 class="categori">Download</h5>
-            </div>
-          </div>
-          <div class="col-lg-3 col-6">
-            <div class="fun-box">
-              <div class="icon">
-                <i class="icofont-heart-alt"></i>
-              </div>
-              <div class="counter-wrapper">
-                <h3 class="counter">500+</h3><span class="math">+</span>
-              </div>
-              <h5 class="categori">Happy Clients</h5>
-            </div>
-          </div>
-          <div class="col-lg-3 col-6">
-            <div class="fun-box">
-              <div class="icon">
-                <i class="icofont-star"></i>
-              </div>
-              <div class="counter-wrapper">
-                <h3 class="counter">335+</h3><span class="math">+</span>
-              </div>
-              <h5 class="categori">Total Rates</h5>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Counter Area End -->
   </section>
   <!-- Video Area End -->
 
@@ -424,7 +372,7 @@
       <div class="row justify-content-center">
         <div class="col-md-10 col-lg-8">
           <div class="section-title">
-            <h2 class="title">Applion Screenshorts</h2>
+            <h2 class="title">App Screenshorts</h2>
             <p>
               Let's check out the screenshot of our app.
             </p>
@@ -570,7 +518,7 @@
                         </li>
                       </ul>
   
-                    <p class="client-say">Best app for Bussid gamer. Thanks LiveryBus team.</p>
+                    <p class="client-say">Best app for all Bussid gamers. I appreciate your work. Thanks LiveryBus team.</p>
                 </div>
                </div>
               </div>
@@ -578,7 +526,7 @@
             <div class="item">
               <div class="client">
                 <div class="client-image">
-                  <img src="assets/images/team/3.png" class="img-fluid" alt="">
+                  <img src="assets/images/team/3.jpg" class="img-fluid" alt="">
                 </div>
                <div class="content align-self-center">
                 <div class="content-inner">
@@ -766,7 +714,7 @@
             <div class="panel">
               <div class="panel-heading">
                 <h4 data-toggle="collapse" aria-expanded="false" data-target="#two" aria-controls="two" class="panel-title">
-                  Why I will Use Applion ?
+                  Why will I use LiveryBus ?
                 </h4>
               </div>
               <div id="two" class="panel-collapse collapse" aria-labelledby="two" data-parent="#accordion-1">
@@ -839,8 +787,7 @@
               <div class="section-title extra">
                   <h2 class="title">Download over <span>200+ worldwide, </span> <br> 150+ 5 Star Review.</h2>
       
-                  <p>Expenses as material breeding insisted building to in. Continual so distrusts pronounce by
-                    unwilling listening. Thing do taste on we manor.
+                  <p>Thank you for taking a look in to our website. We are very happy to help you.
                   </p>
                 </div>
           </div>
@@ -867,8 +814,7 @@
         <div class="col-md-10 col-lg-8">
           <div class="section-title">
             <h2 class="title">Contact Us</h2>
-            <p>Expenses as material breeding insisted building to in. Continual so distrusts pronounce by
-              unwilling listening. Thing do taste on we manor.
+            <p>
             </p>
           </div>
         </div>
