--- a/home1-color1.html
+++ b/home1-color1.html
@@ -443,7 +443,7 @@
         <div class="col-md-10 col-lg-8">
           <div class="section-title extra">
             <h2 class="title">Our Clients Say </h2>
-            <p>Let's check out what users say about our app
+            <p>Let's take a look at what users said about our app
             </p>
           </div>
         </div>
@@ -490,7 +490,7 @@
             <div class="item">
               <div class="client">
                 <div class="client-image">
-                  <img src="assets/images/team/2.png" class="img-fluid" alt="">
+                  <img src="assets/images/team/2.jpg" class="img-fluid" alt="">
                 </div>
                <div class="content align-self-center">
                 <div class="content-inner">
