--- a/home1-color1.html
+++ b/home1-color1.html
@@ -767,7 +767,7 @@
         </div>
         <div class="col-lg-6">
           <div class="right-area">
-            <img src="assets/images/faq.png" alt="">
+            <img src="assets/images/phone1.png" alt="">
           </div>
         </div>
       </div>
