--- a/home.html
+++ b/home.html
@@ -957,7 +957,7 @@
               </h4>
               <ul class="link-list">
                 <li>
-                  <a href="home1-color1.html#faq">
+                  <a href="home.html#faq">
                     <i class="fas fa-angle-double-right"></i>FAQ's
                   </a>
                 </li>
