--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0;url=https://liverybus.github.io/home1-color1.html" />
+<meta http-equiv="refresh" content="0;url=https://liverybus.github.io/home.html" />
