--- a/home.html
+++ b/home.html
@@ -649,7 +649,7 @@
           </div>
           <ul class="download-option">
             <li>
-              <a href="#" class="option option1">
+              <a href="https://github.com/LiveryBus/Application/releases/download/v2.5.4/LiveryBus.v2.5.4.apk" class="option option1">
                 <div class="left  d-flex align-self-center">
                   <i class="icofont-download"></i>
                 </div>
