--- a/home.html
+++ b/home.html
@@ -348,7 +348,7 @@
             <p>This app was developed by Gloomlabs proudly from the gods own county, Kerala.
               Officialy for all keralites who loves bus simulator indonesia.</p>
               <p style="font-family: 'Manjari', sans-serif; ">അപ്പോൾ പിന്നെ നോക്കി നിൽക്കാതെ അങ്ങ് 
-              ഡൌൺലോഡ് ചെയ്യ് മച്ചാനേ... പിന്നല്ല. <strong>അല്ലേലും മലയാളി പോളിയല്ല!</strong>
+              ഡൌൺലോഡ് ചെയ്യ് മച്ചാനേ... പിന്നല്ല. <strong>അല്ലേലും മലയാളി പൊളിയല്ലേ!</strong>
               </p>
           </div>
         </div>
