--- a/home.html
+++ b/home.html
@@ -654,8 +654,8 @@
                   <i class="icofont-download"></i>
                 </div>
                 <div class="right">
-                  <span><a href="https://github.com/LiveryBus/Application/releases/download/v2.5.4/LiveryBus.v2.5.4.apk">Download LiveryBus</span>
-                  <p>v1.6.0</p>
+                  <span>Download LiveryBus</span>
+                  <p>v2.5.4</p>
                 </div>
               </a>
             </li>
