--- a/home.html
+++ b/home.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="msvalidate.01" content="85ACBDE96BB7D87E5CE89949893D235B" />
   <title> LiveryBus</title>
-  <discription>Download High Quality Bussid Liveries For Free</discription>
   <!-- favicon -->
   <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
   <!-- bootstrap -->
