--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <meta http-equiv="refresh" content="0;url=https://liverybus.github.io/home.html" />
+<meta name="msvalidate.01" content="85ACBDE96BB7D87E5CE89949893D235B" />
