--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="msvalidate.01" content="85ACBDE96BB7D87E5CE89949893D235B" />
+  <meta name="google-adsense-account" content="ca-pub-8616038278873218">
   <title> LiveryBus</title>
   <!-- favicon -->
   <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
@@ -31,8 +32,6 @@
   <link rel="stylesheet" href="assets/css/style.css">
   <!-- responsive -->
   <link rel="stylesheet" href="assets/css/responsive.css">
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8616038278873218"
-     crossorigin="anonymous"></script>
 </head>
 
 <body>
