--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
   <link rel="stylesheet" href="assets/css/style.css">
   <!-- responsive -->
   <link rel="stylesheet" href="assets/css/responsive.css">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8616038278873218"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
